# Health-Rag-System

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Emtion_Classifier.ipynb  Intent_Classifier.ipynb  Language_Detection.ipynb  README.md  Rag_Notebook.ipynb  api.py  auth.py  cache_layer.py  config.py  crisis_handler.py  docker-compose.yml  emotion_inference.py  index.html  language_inference.py  main.py  memory.py  pipeline.py  pyproject.toml  rag_pipeline.py  requirements.txt  responses.txt  test.py
Mental_Health_System/: .gitignore  datasets.txt  requirements.txt
Mental_Health_System/logs/: pipeline_conversations.jsonl
Mental_Health_System/module_1_language_detection/: module_1_language_detection.ipynb
Mental_Health_System/module_2_emotion_classifier/: module_2_emotion_classifier.ipynb
Mental_Health_System/module_3_intent_classifier/: module_3_intent_classifier.ipynb
Mental_Health_System/module_4_rag/: clean_dataset.csv  clean_dataset.parquet  dataset_meta.json  module_4_data_preprocessing.ipynb  module_4_rag.ipynb
Mental_Health_System/pipeline/: pipeline_integration_test.ipynb
app/: main.py
app/api/: auth.py  chat.py  voice.py
app/core/: database.py  security.py
app/models/: chat_message.py  user.py
app/schemas/: user.py
app/services/: auth_service.py  chat_service.py  chatbot_service.py  whisper_service.py
app/templates/: chat.html  index.html  (+2 more)
classifier/: emotion_inference.py  intent_classifier.py  language_inference.py  preprocessor.py  utils.py
evaluation/: dataset_builder.py  eval_runner.py  gemini_llm.py  groq_llm.py  rag_wrapper.py
locales/: ar.json  bg.json  de.json  el.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  nl.json  pl.json  pt.json  ru.json  sw.json  th.json  tr.json  ur.json  vi.json  zh.json
notebooks/: Intent_Classifier.ipynb
rag/: crisis_handler.py  hotlines.py  rag_pipeline.py
routes/: auth_routes.py  chat.py
static/: app.js  index.html  login.html  style.css
(+25 files in other folders)
