[project]
name = "health-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cohere>=6.1.0",
    "datasets>=4.8.5",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.136.3",
    "google-genai>=2.3.0",
    "groq>=1.2.0",
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "langchain>=1.3.2",
    "numpy>=2.4.4",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "passlib[argon2,bcrypt]>=1.7.4",
    "pyjwt>=2.13.0",
    "python-jose[cryptography]>=3.5.0",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "huggingface-hub>=0.32.0",
    "weaviate>=0.1.2",
]
